Entfernen von redundanten Buttons